--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
  <body>
    <div class="parent">
      <div class="wrapper">
-       <nav>
+
+      <nav>
   <div class="inner-wrap">
-    <div class="site-header">Insert Name</div>
+    <div class="site-header">Leah</div>
+
+ <nav>
+  <div class="inner-wrap">
+    <div class="site-header">Leah</div>
     <div class="site-subheader">Web Developer</div>
     <ul class="site-navigation">
       <li>
@@ -23,6 +28,8 @@
       </li>
       <li>
         <a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+        <li><a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></li>
+
     </ul>
   </div>
 </nav>
