--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+   <link rel="stylesheet" type="text/css" href="style.css">
    <link
      rel="stylesheet"
      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
@@ -13,21 +14,21 @@
  <body>
    <div class="parent">
      <div class="wrapper">
-       <nav>
+      <nav>
   <div class="inner-wrap">
-    <div class="site-header">Insert Name</div>
+    <div class="site-header">Leah</div>
     <div class="site-subheader">Web Developer</div>
     <ul class="site-navigation">
-      <li>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
-      </li>
-      <li>
-        <a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+      <li><a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></li>
+      <li><a href="portfolio.html"><i class="fas fa-gem"></i>Portfolio</a></li>
     </ul>
   </div>
 </nav>
 
-  <main>
+
+      <main>
   <div class="menu">
     <div class="menu-icon" id="sidebarCollapse"><i class="fas fa-bars"></i> <span class="mobile-header">Your Name: Web Developer</span></div>
   </div>
@@ -55,6 +56,7 @@
 
 
        </main>
+
      </div>
    </div>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
