--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+   <link rel="stylesheet" type="text/css" href="style.css">
    <link
      rel="stylesheet"
      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
@@ -13,30 +14,19 @@
  <body>
    <div class="parent">
      <div class="wrapper">
- <nav>
+      <nav>
   <div class="inner-wrap">
     <div class="site-header">Leah</div>
     <div class="site-subheader">Web Developer</div>
     <ul class="site-navigation">
-      <li>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
-      </li>
-      <li>
-        <a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
-              <li>
-        <a href="contact.html"><i class="fas fa-comment-dots"></i> Contact
-        </a>
-      </li>
-<<<<<<< HEAD
-=======
-            <li>
-        <a href="portfolio.html"><i class="fas fa-gem"></i> Portfolio</a>
-      </li>
- 
->>>>>>> Add portfolio.html page
+      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+      <li><a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></li>
+      <li><a href="portfolio.html"><i class="fas fa-gem"></i>Portfolio</a></li>
     </ul>
   </div>
 </nav>
+
 
 <main>
   <div class="menu">
@@ -55,6 +45,10 @@
     Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
   </footer>
 </main>
+
+
+
+
      </div>
    </div>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
